# pod-insights

./: .gitattributes  .gitignore  .rustfmt.toml  CATEGORY-RIVER-GUIDE.md  COMPARISON.md  Cargo.toml  DISCUSSION-MODE.md  DURATION-HEATMAPS.md  IMPLEMENTATION-SUMMARY.md  MARKDOWN-RENDERING.md  MOBILE-OPTIMIZATION.md  README.md  RUST-CLUSTERING.md  RUST-INDEX.md  RUST-PORT-SUMMARY.md  RUST-QUICK-START.md  TABLE-SCROLL-FIX.md  UMAP-FEATURE.md  UTF8-FIX.md  VISUAL-EXPLANATION.md  analyze-cluster-speakers.js  build-and-run.sh  build-variant.sh  cluster-categories.js  cluster-speakers.json  cluster-topics-reference.js  cluster-topics.js  compare-performance.sh  create-embeddings.js  create-rag-db.js  extract-topics.js  generate-category-river.js  generate-cluster-cluster-heatmap.js  generate-dayofweek-duration-heatmap.js  generate-speaker-profiles.js  generate-speaker-river.js  generate-topic-river.js  generate-topic-umap.js  generate-year-duration-heatmap.js  modify_rust_for_variants.py  (+9 more)
db/: rag-embeddings.json  rag-embeddings.sample.json  topic-embeddings.json
docs/: CITY-COORDINATES-DATABASE.md  CLUSTERING-V2.md  COVERAGE-IMPROVEMENT.md  DISCUSSION-MODE.md  DURATION-HEATMAPS.md  EPISODE-SUBJECTS-FORMAT.md  EPISODE-TABLE-LOADING.md  GITHUB-PAGES-SETUP.md  HEATMAP-SPEAKER-IMAGES.md  NGINX-GEOIP-CONFIG.md  PERFORMANCE-SCALING.md  PERSISTENT-SEARCH-SETTINGS.md  PHASE1-COMPLETE.md  PROJECT-QUALITY-ASSESSMENT.md  REGENERATE-PROFILES.md  RIVER-CHARTS-OVERVIEW.md  RUST-CLUSTERING.md  SPEAKER-FILTERED-SEARCH.md  SPEAKER-INDEX.md  SPEAKER-METADATA-SCRAPER.md  SPEAKER-PERSONAS-QUICKSTART.md  SPEAKER-PERSONAS.md  SPEAKER-PROFILES.md  TESTING.md  UMAP-FEATURE.md  VARIANTS-COMPLETE.md  VARIANTS-QUICKSTART.md  VARIANTS-SYSTEM.md  VISUAL-EXPLANATION.md
episodes/: 1-topics.json
episodes.bak/: 1-topics.json  1.json  10-sn.json  10-text.html  10-topics.json  100-text.html  100-topics.json  100.json  101-osf.json  101-text.html  101-topics.json  101.json  102-osf.json  102-text.html  102-topics.json  103-osf.json  103-topics.json  103.json  104-text.html  104-topics.json  105-osf.json  105-text.html  105-topics.json  105.json  106-text.html  106-topics.json  107-osf.json  107-topics.json  108-osf.json  108-text.html  108-topics.json  109-text.html  109-topics.json  11-topics.json  11.json  110-osf.json  110-text.html  110-topics.json  111-text.html  111-topics.json  (+789 more)
frontend/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
lib/: generate-helpers.js
obsolete/: CATEGORY-RIVER-GUIDE.md  cluster-categories.js
scripts/: analyze-cluster-speakers.js  (+41 more)
(+6904 files in other folders)
