[package]
name = "freakshow-ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cluster-topics"
path = "src/cluster_topics.rs"

[[bin]]
name = "cluster-topics-v2"
path = "src/cluster_topics_v2.rs"

[[bin]]
name = "rag-backend"
path = "src/rag_backend.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

# Backend (HTTP API)
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# V2 dependencies for improved clustering
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"
ordered-float = "4.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
